# mcp-server

./: .gitignore  README.md  pyproject.toml
.github/instructions/: py.instructions.md
docs/: agent_coding.md  auto_coding.md  elon_musk_principle.md  mcp.md  software_develop.md
mcp-time-node/: .dockerignore  Dockerfile  README.md  demo.js  mcp.json  package-lock.json  package.json  server.js
mcp-windows-python/: .gitignore  README.md  config.json  mcp.json  pyproject.toml  requirements.txt
mcp-windows-python/src/: __init__.py  server.py
python/echo/: pyproject.toml
python/echo-json-rpc-demo/: server.py
python/echo/src/: server.py
python/http-time/: server.py
python/json-rpc-demo/: server.py  server_test.py
python/mcp-framework/: README.md  app.py  main.py  pyproject.toml
python/mcp-framework/api/: dependencies.py  routes.py
python/mcp-framework/config/: security.py  settings.py
python/mcp-framework/core/: exceptions.py  json_rpc.py  registry.py  security.py  service_base.py
python/mcp-framework/docs/: openapi.json
python/mcp-framework/handlers/: __init__.py  core_handlers.py  service_handlers.py
python/mcp-framework/middlewares/: auth.py  logging.py  rate_limiter.py
python/mcp-lite-framework-json-rpc/: server.py
python/mcp-simple-v1/: Dockerfile  README.md  pyproject.toml
python/mcp-simple-v1/src/: server.py
python/mcp-simple-v1/src/core/: __init__.py  handlers.py  logging.py  registry.py  service_base.py
python/mcp-simple-v1/src/core/models/: json_rpc.py
python/mcp-simple-v1/src/sevices/: echo_service.py  ping_service.py  time_service.py
python/simple-streamablehttp/: server.py
python/time/: pyproject.toml
python/time/src/: __init__.py  server.py
rust/: Cargo.toml
rust.mcp.chroma/: .gitignore  Cargo.toml  README.md  chroma.code-workspace
rust.mcp.chroma/.github/: chroma-workflow-template.md  rust-coding-conventions.md
rust.mcp.chroma/src/: classifier.rs  client.rs  config.rs  lib.rs  main.rs  tools.rs
rust/src/: main.rs
smart-home-mcp-server/: Dockerfile  README.md  integration-test.js  package-lock.json  package.json
smart-home-mcp-server/src/: mcp-server-cjs.js  mcp-server.js  server.js
smart-home-mcp-server/tests/: README.md  server_test.js  simple-test.js  test-mcp-client.js
(+29 files in other folders)
