[project]
name = "mcp-windows-security"
version = "2.0.0"
description = "Advanced MCP Server for Windows Security Monitoring and Protection"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
windows-security-server = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.sources]
"src" = "mcp_windows_security"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
