[project]
name = "mcp-simple-v1"
version = "0.1.0"
description = "A simple FastAPI server with JSON-RPC 2.0 support."
authors = [{ name = "Mai Thành Duy An" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies=[
  "fastapi", 
  "uvicorn",
  "pydantic",
  "pydantic-settings"
]

[project.scripts]
mcp-server = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


