# pyproject.toml
# This file is used to configure the Python project using PEP 518 and PEP
[project]
name = "time-mcp"
version = "0.1.0"
description = "A simple MCP server providing current time as a tool and resource."

requires-python = ">=3.8"

[project.scripts]
time-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
